/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds
 */
plugins {
    id 'com.bmuschko.clover' version '2.2.3'
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.13'
}


subprojects{
    apply plugin: "java"
    apply plugin: "com.bmuschko.clover"
    apply plugin: "org.openjfx.javafxplugin"
    repositories {
        jcenter()
        mavenCentral()
    }
    java {
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }
    javafx {
        version = "20"
        modules = [ 'javafx.controls', 'javafx.fxml' ]
    }
    dependencies {
        // Use JUnit Jupiter for testing.
        testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.2'
        testImplementation 'org.junit.platform:junit-platform-launcher:1.6.2'
        // This dependency is used by the application.
        implementation 'com.google.guava:guava:30.1.1-jre'
        clover 'org.openclover:clover:4.4.1'
        // Use Mockito for testing
        testImplementation 'org.mockito:mockito-core:3.12.4'

        implementation 'org.openjfx:javafx-base:16'
        implementation 'org.openjfx:javafx-controls:16'
        implementation 'org.openjfx:javafx-fxml:16'
        implementation 'org.openjfx:javafx-graphics:16'
        implementation 'org.openjfx:javafx-media:16'
        implementation 'org.openjfx:javafx-swing:16'
        implementation 'org.openjfx:javafx-web:16'
        implementation 'org.mongodb:mongodb-driver-sync:4.5.1'
        implementation 'com.google.code.gson:gson:2.10.1'
        implementation 'dev.morphia.morphia:morphia-core:2.2.6'
        implementation 'org.slf4j:slf4j-log4j12:1.7.30'
        implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
        testImplementation "org.testfx:testfx-core:4.0.16-alpha"
        testImplementation "org.testfx:testfx-junit5:4.0.16-alpha"
        testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
        testImplementation 'org.testfx:openjfx-monocle:jdk-12.0.1+2'   
    }
    clover{
        compiler{
            additionalArgs = "-g:lines,source,vars"
        }
    }
    test{
        testLogging{
            showStandardStreams = true
            exceptionFormat = 'full'
        }
        //systemProperty "testfx.headless", "true"
        //systemProperty "testfx.robot", "glass"

    }
    test {
        // Use junit platform for unit tests
        useJUnitPlatform()
    }

}

// Project specific stuff
project (':shared'){
}
project (':server'){
    dependencies {
        implementation project(':shared')
//        testImplementation project(path: ':shared', configuration: "testPkg")
    }
}
project (':client'){
    dependencies {
        implementation project(':shared')
//        testImplementation project(path: ':shared', configuration: "testPkg")
    }
}
clover {
    report{
        xml=true
        html=true
    }
}

tasks.register("run-server") {
    dependsOn project('server').getTasksByName('run',false)
    group = 'Run Client/Server'
    description = 'Run the Server'
}

tasks.register("run-client") {
    dependsOn project('client').getTasksByName('run',false)
    group = 'Run Client/Server'
    description = 'Run the Client'
}

tasks.register("resolveDependencies") {
 dependsOn project('server').getTasksByName('resolveDependencies',false)
 dependsOn project('client').getTasksByName('resolveDependencies',false)
 group = 'Build'
 description = 'Resolve/Download Dependencies'
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}
